--- a/index.html
+++ b/index.html
@@ -3,15 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Sitegen</title>
+  <title>Sitegen – Home</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="https://www.favicon.cc/logo3d/147380.png">
   <style>
-    body { margin:0; font-family:ui-sans-serif,system-ui; background:#f7f7f7; color:#111827; display:flex; flex-direction:column; min-height:100vh; }
+    body {
+      margin:0;
+      font-family:ui-sans-serif,system-ui;
+      background:#f3f4f6;
+      color:#111827;
+      display:flex;
+      flex-direction:column;
+      min-height:100vh;
+    }
 
     /* Header */
-    header { background:#fff; border-bottom:1px solid #e5e7eb; position:sticky; top:0; z-index:50; }
-    .header-inner { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; padding:16px 24px; }
+    header {
+      background:#fff;
+      border-bottom:1px solid #e5e7eb;
+      position:sticky;
+      top:0;
+      z-index:50;
+    }
+    .header-inner {
+      max-width:1200px;
+      margin:0 auto;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:16px 24px;
+    }
     .brand { font-weight:700; font-size:1.5rem; }
     nav a { margin-left:16px; text-decoration:none; color:#111827; font-weight:500; }
     .btn { padding:10px 16px; border-radius:8px; font-weight:600; cursor:pointer; border:none; transition:0.2s; }
@@ -20,29 +40,42 @@
     .btn-ghost { background:transparent; border:1px solid #d1d5db; color:#111827; }
     .btn-ghost:hover { background:#f3f4f6; }
 
-    /* Hero Section */
-    .hero { text-align:center; padding:80px 24px; background:#111827; color:#fff; }
+    /* Hero */
+    .hero { max-width:1200px; margin:40px auto 24px; text-align:center; padding:0 24px; }
     .hero h1 { font-size:2.5rem; font-weight:800; margin-bottom:16px; }
-    .hero p { font-size:1.25rem; margin-bottom:24px; }
-    .hero .cta-buttons { display:flex; justify-content:center; gap:16px; flex-wrap:wrap; }
+    .hero p { font-size:1.25rem; color:#6b7280; }
 
-    /* Templates Grid */
-    #libraryGrid { display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:24px; padding:24px; }
-
-    .card { background:#fff; border-radius:16px; overflow:hidden; box-shadow:0 8px 24px rgba(0,0,0,0.08); cursor:pointer; transition:transform 0.2s, box-shadow 0.2s; display:flex; flex-direction:column; }
-    .card:hover { transform:translateY(-4px); box-shadow:0 16px 40px rgba(0,0,0,0.12); }
+    /* Templates grid */
+    #libraryGrid {
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      gap:24px;
+      max-width:1200px;
+      margin:24px auto;
+      padding:0 24px;
+    }
+    .card {
+      background:#fff;
+      border-radius:16px;
+      overflow:hidden;
+      box-shadow:0 10px 24px rgba(0,0,0,.06);
+      cursor:pointer;
+      transition:transform 0.2s, box-shadow 0.2s;
+    }
+    .card:hover { transform:translateY(-3px); box-shadow:0 18px 40px rgba(0,0,0,.12); }
     .card img { width:100%; height:160px; object-fit:cover; }
-    .card-title { font-weight:700; font-size:1.1rem; padding:12px; text-align:center; }
+    .card .card-title { font-weight:700; font-size:1.1rem; padding:12px; }
 
     /* Footer */
     footer { background:#111827; color:#d1d5db; padding:40px 0; margin-top:auto; }
-    .footer-grid { display:flex; flex-wrap:wrap; max-width:1200px; margin:0 auto; padding:0 24px; gap:24px; justify-content:space-between; }
+    .footer-grid { display:flex; flex-wrap:wrap; max-width:1200px; margin:0 auto; padding:0 24px; gap:24px; justify-content: space-between; }
     .footer-grid > div { flex:1 1 250px; min-width:200px; }
     footer h4, footer h5 { color:#fff; margin-bottom:12px; }
-    footer ul { list-style:none; padding:0; }
+    footer ul { list-style:none; padding:0; margin:0; }
+    footer ul li { margin-bottom:8px; }
     footer ul li a { color:#d1d5db; text-decoration:none; }
     footer ul li a:hover { color:#fff; }
-    footer .text-center { text-align:center; margin-top:20px; font-size:.875rem; color:#9ca3af; }
+    .text-center { text-align:center; margin-top:20px; font-size:.875rem; color:#9ca3af; }
   </style>
 </head>
 <body>
@@ -60,19 +93,14 @@
     <div>
       <a href="login.html" class="btn btn-ghost">Login</a>
       <a href="signup.html" class="btn btn-black">Get Started</a>
-      <a href="Sitegen_Hosting/hosting.html" class="btn btn-black">Visit Hosting</a>
     </div>
   </div>
 </header>
 
-<!-- Hero Section -->
+<!-- Hero -->
 <section class="hero">
   <h1>Make your own site in minutes</h1>
-  <p>Sitegen allows you to create your website easily with just a few clicks.</p>
-  <div class="cta-buttons">
-    <a href="signup.html" class="btn btn-black">Get Started</a>
-    <a href="library.html" class="btn btn-ghost">Browse Templates</a>
-  </div>
+  <p>Build professional websites with just a few clicks. No coding required.</p>
 </section>
 
 <!-- Templates Grid -->
@@ -104,8 +132,34 @@
 </footer>
 
 <script>
-  // Load templates from localStorage (unchanged)
-  let library = JSON.parse(localStorage.getItem("sitegenLibrary") || "[]");
+  // Dummy templates
+  let library = [
+    {
+      type:"template",
+      name:"Portfolio Template",
+      thumbnail:"https://via.placeholder.com/400x200?text=Portfolio",
+      content:"data:application/zip;base64,UEsDBBQA..." // dummy base64 zip
+    },
+    {
+      type:"template",
+      name:"Business Template",
+      thumbnail:"https://via.placeholder.com/400x200?text=Business",
+      content:"data:application/zip;base64,UEsDBBQA..." 
+    },
+    {
+      type:"template",
+      name:"Blog Template",
+      thumbnail:"https://via.placeholder.com/400x200?text=Blog",
+      content:"data:application/zip;base64,UEsDBBQA..." 
+    },
+    {
+      type:"template",
+      name:"E-commerce Template",
+      thumbnail:"https://via.placeholder.com/400x200?text=E-commerce",
+      content:"data:application/zip;base64,UEsDBBQA..." 
+    }
+  ];
+
   const libraryGrid = document.getElementById("libraryGrid");
 
   function openInWizard(zipBlob) {
@@ -119,28 +173,27 @@
 
   function renderTemplates() {
     libraryGrid.innerHTML = "";
-    library.forEach((item) => {
-      if (item.type === "template") {
-        const card = document.createElement("div");
-        card.className = "card";
+    library.forEach((item)=>{
+      const card = document.createElement("div");
+      card.className = "card";
 
-        const img = document.createElement("img");
-        img.src = item.thumbnail || "https://via.placeholder.com/400x200?text=No+Thumbnail";
-        card.appendChild(img);
+      const img = document.createElement("img");
+      img.src = item.thumbnail;
+      card.appendChild(img);
 
-        const title = document.createElement("div");
-        title.className = "card-title";
-        title.textContent = item.name || "Untitled Template";
-        card.appendChild(title);
+      const title = document.createElement("div");
+      title.className = "card-title";
+      title.textContent = item.name;
+      card.appendChild(title);
 
-        card.onclick = async () => {
-          const response = await fetch(item.content);
-          const blob = await response.blob();
-          openInWizard(blob);
-        };
-
-        libraryGrid.appendChild(card);
+      card.onclick = async ()=>{
+        // Convert base64 string to blob
+        const res = await fetch(item.content);
+        const blob = await res.blob();
+        openInWizard(blob);
       }
+
+      libraryGrid.appendChild(card);
     });
   }
 
