--- a/index.html
+++ b/index.html
@@ -1,82 +1,88 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sitegen – Home</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      margin:0;
-      font-family:ui-sans-serif,system-ui;
-      background:#f3f4f6;
-      color:#111827;
-      display:flex;
-      flex-direction:column;
-      min-height:100vh;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sitegen – Home</title>
+<link rel="stylesheet" href="style.css">
+<style>
+  body {
+    margin:0;
+    font-family:ui-sans-serif,system-ui;
+    background:#f3f4f6;
+    color:#111827;
+    display:flex;
+    flex-direction:column;
+    min-height:100vh;
+  }
 
-    /* Header */
-    header {
-      background:#fff;
-      border-bottom:1px solid #e5e7eb;
-      position:sticky;
-      top:0;
-      z-index:50;
-    }
-    .header-inner {
-      max-width:1200px;
-      margin:0 auto;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      padding:16px 24px;
-    }
-    .brand { font-weight:700; font-size:1.5rem; }
-    nav a { margin-left:16px; text-decoration:none; color:#111827; font-weight:500; }
-    .btn { padding:10px 16px; border-radius:8px; font-weight:600; cursor:pointer; border:none; transition:0.2s; }
-    .btn-black { background:#000; color:#fff; }
-    .btn-black:hover { opacity:0.9; transform:translateY(-1px); }
-    .btn-ghost { background:transparent; border:1px solid #d1d5db; color:#111827; }
-    .btn-ghost:hover { background:#f3f4f6; }
+  /* Header */
+  header {
+    background:#fff;
+    border-bottom:1px solid #e5e7eb;
+    position:sticky;
+    top:0;
+    z-index:50;
+  }
+  .header-inner {
+    max-width:1200px;
+    margin:0 auto;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    padding:16px 24px;
+  }
+  .brand { font-weight:700; font-size:1.5rem; }
+  nav a { margin-left:16px; text-decoration:none; color:#111827; font-weight:500; }
+  .btn { padding:10px 16px; border-radius:8px; font-weight:600; cursor:pointer; border:none; transition:0.2s; }
+  .btn-black { background:#000; color:#fff; }
+  .btn-black:hover { opacity:0.9; transform:translateY(-1px); }
+  .btn-ghost { background:transparent; border:1px solid #d1d5db; color:#111827; }
+  .btn-ghost:hover { background:#f3f4f6; }
 
-    /* Hero */
-    .hero { max-width:1200px; margin:40px auto 24px; text-align:center; padding:0 24px; }
-    .hero h1 { font-size:2.5rem; font-weight:800; margin-bottom:16px; }
-    .hero p { font-size:1.25rem; color:#6b7280; }
+  /* Hero */
+  .hero {
+    background-color:#1e293b; /* dark slate */
+    color:#f8fafc;
+    text-align:center;
+    padding:100px 24px 60px;
+  }
+  .hero h1 { font-size:3rem; font-weight:800; margin-bottom:16px; }
+  .hero p { font-size:1.25rem; color:#cbd5e1; }
 
-    /* Templates grid */
-    #libraryGrid {
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-      gap:24px;
-      max-width:1200px;
-      margin:24px auto;
-      padding:0 24px;
-    }
-    .card {
-      background:#fff;
-      border-radius:16px;
-      overflow:hidden;
-      box-shadow:0 10px 24px rgba(0,0,0,.06);
-      cursor:pointer;
-      transition:transform 0.2s, box-shadow 0.2s;
-    }
-    .card:hover { transform:translateY(-3px); box-shadow:0 18px 40px rgba(0,0,0,.12); }
-    .card img { width:100%; height:160px; object-fit:cover; }
-    .card .card-title { font-weight:700; font-size:1.1rem; padding:12px; }
+  /* Templates grid */
+  #libraryGrid {
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+    gap:24px;
+    max-width:1200px;
+    margin:40px auto;
+    padding:0 24px;
+  }
+  .card {
+    background:#fff;
+    border-radius:16px;
+    overflow:hidden;
+    box-shadow:0 10px 24px rgba(0,0,0,.06);
+    cursor:pointer;
+    transition:transform 0.2s, box-shadow 0.2s;
+    text-align:center;
+  }
+  .card:hover { transform:translateY(-3px); box-shadow:0 18px 40px rgba(0,0,0,.12); }
+  .card img { width:100%; height:160px; object-fit:cover; }
+  .card .card-title { font-weight:700; font-size:1.1rem; padding:12px; }
 
-    /* Footer */
-    footer { background:#111827; color:#d1d5db; padding:40px 0; margin-top:auto; }
-    .footer-grid { display:flex; flex-wrap:wrap; max-width:1200px; margin:0 auto; padding:0 24px; gap:24px; justify-content: space-between; }
-    .footer-grid > div { flex:1 1 250px; min-width:200px; }
-    footer h4, footer h5 { color:#fff; margin-bottom:12px; }
-    footer ul { list-style:none; padding:0; margin:0; }
-    footer ul li { margin-bottom:8px; }
-    footer ul li a { color:#d1d5db; text-decoration:none; }
-    footer ul li a:hover { color:#fff; }
-    .text-center { text-align:center; margin-top:20px; font-size:.875rem; color:#9ca3af; }
-  </style>
+  /* Footer */
+  footer { background:#111827; color:#d1d5db; padding:40px 0; margin-top:auto; }
+  .footer-grid { display:flex; flex-wrap:wrap; max-width:1200px; margin:0 auto; padding:0 24px; gap:24px; justify-content: space-between; }
+  .footer-grid > div { flex:1 1 250px; min-width:200px; }
+  footer h4, footer h5 { color:#fff; margin-bottom:12px; }
+  footer ul { list-style:none; padding:0; margin:0; }
+  footer ul li { margin-bottom:8px; }
+  footer ul li a { color:#d1d5db; text-decoration:none; }
+  footer ul li a:hover { color:#fff; }
+  .text-center { text-align:center; margin-top:20px; font-size:.875rem; color:#9ca3af; }
+</style>
 </head>
 <body>
 
@@ -132,35 +138,10 @@
 </footer>
 
 <script>
-  // Dummy templates
-  let library = [
-    {
-      type:"template",
-      name:"Portfolio Template",
-      thumbnail:"https://via.placeholder.com/400x200?text=Portfolio",
-      content:"data:application/zip;base64,UEsDBBQA..." // dummy base64 zip
-    },
-    {
-      type:"template",
-      name:"Business Template",
-      thumbnail:"https://via.placeholder.com/400x200?text=Business",
-      content:"data:application/zip;base64,UEsDBBQA..." 
-    },
-    {
-      type:"template",
-      name:"Blog Template",
-      thumbnail:"https://via.placeholder.com/400x200?text=Blog",
-      content:"data:application/zip;base64,UEsDBBQA..." 
-    },
-    {
-      type:"template",
-      name:"E-commerce Template",
-      thumbnail:"https://via.placeholder.com/400x200?text=E-commerce",
-      content:"data:application/zip;base64,UEsDBBQA..." 
-    }
-  ];
-
   const libraryGrid = document.getElementById("libraryGrid");
+
+  // Load templates dynamically from localStorage set by admin
+  let library = JSON.parse(localStorage.getItem("sitegenLibrary") || "[]");
 
   function openInWizard(zipBlob) {
     const reader = new FileReader();
@@ -174,26 +155,27 @@
   function renderTemplates() {
     libraryGrid.innerHTML = "";
     library.forEach((item)=>{
-      const card = document.createElement("div");
-      card.className = "card";
+      if(item.type==="template"){
+        const card = document.createElement("div");
+        card.className = "card";
 
-      const img = document.createElement("img");
-      img.src = item.thumbnail;
-      card.appendChild(img);
+        const img = document.createElement("img");
+        img.src = item.thumbnail || "https://via.placeholder.com/400x200?text=No+Thumbnail";
+        card.appendChild(img);
 
-      const title = document.createElement("div");
-      title.className = "card-title";
-      title.textContent = item.name;
-      card.appendChild(title);
+        const title = document.createElement("div");
+        title.className = "card-title";
+        title.textContent = item.name || "Unnamed Template";
+        card.appendChild(title);
 
-      card.onclick = async ()=>{
-        // Convert base64 string to blob
-        const res = await fetch(item.content);
-        const blob = await res.blob();
-        openInWizard(blob);
+        card.onclick = async ()=>{
+          const res = await fetch(item.content);
+          const blob = await res.blob();
+          openInWizard(blob);
+        }
+
+        libraryGrid.appendChild(card);
       }
-
-      libraryGrid.appendChild(card);
     });
   }
 
