--- a/index.html
+++ b/index.html
@@ -59,18 +59,24 @@
     margin:40px auto;
     padding:0 24px;
   }
-  .card {
-    background:#fff;
-    border-radius:16px;
-    overflow:hidden;
-    box-shadow:0 10px 24px rgba(0,0,0,.06);
-    cursor:pointer;
-    transition:transform 0.2s, box-shadow 0.2s;
-    text-align:center;
-  }
-  .card:hover { transform:translateY(-3px); box-shadow:0 18px 40px rgba(0,0,0,.12); }
-  .card img { width:100%; height:160px; object-fit:cover; }
-  .card .card-title { font-weight:700; font-size:1.1rem; padding:12px; }
+ .card {
+  background:#1e293b; /* dark slate */
+  color:#f8fafc;       /* light text */
+  border-radius:16px;
+  overflow:hidden;
+  box-shadow:0 10px 24px rgba(0,0,0,.06);
+  cursor:pointer;
+  transition:transform 0.2s, box-shadow 0.2s;
+  text-align:center;
+}
+.card .card-title {
+  color:#f8fafc;       /* ensure title text is readable */
+}
+
+ .card:hover { 
+  transform:translateY(-3px); 
+  box-shadow:0 18px 40px rgba(0,0,0,.25); 
+}
 
   /* Footer */
   footer { background:#111827; color:#d1d5db; padding:40px 0; margin-top:auto; }
