--- a/plans.html
+++ b/plans.html
@@ -171,7 +171,7 @@
 <script>
   function payWithRazorpay(amount, planName){
     var options = {
-      "key": "rzp_test_RD3SL1DDd7HzJ0,qs0GjAVOUiJMpNcpwS6jrFD1", // Replace with your Razorpay Test Key
+      "key": "rzp_test_RD3SL1DDd7HzJ0", // Replace with your Razorpay Test Key
       "amount": amount * 100, // in paise
       "currency": "USD",
       "name": "Sitegen Hosting",
