--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     display:flex;
     flex-direction:column;
     min-height:100vh;
+    overflow-x:hidden;
   }
 
   /* Header */
@@ -46,9 +47,30 @@
     color:#f8fafc;
     text-align:center;
     padding:100px 24px 60px;
+    position:relative;
+    overflow:hidden;
   }
-  .hero h1 { font-size:3rem; font-weight:800; margin-bottom:16px; }
-  .hero p { font-size:1.25rem; color:#cbd5e1; }
+  .hero h1 { font-size:3rem; font-weight:800; margin-bottom:16px; z-index:1; position:relative; }
+  .hero p { font-size:1.25rem; color:#cbd5e1; z-index:1; position:relative; }
+
+  /* Floating gradient balls - same as features.html */
+  .hero::before, .hero::after {
+    content:"";
+    position:absolute;
+    border-radius:50%;
+    background:linear-gradient(135deg,#3b82f6,#9333ea);
+    opacity:0.2;
+    z-index:0;
+    animation: floatCircle 12s ease-in-out infinite alternate;
+  }
+  .hero::before { width:350px; height:350px; top:-70px; left:-70px; }
+  .hero::after { width:450px; height:450px; bottom:-100px; right:-100px; animation-delay:6s; }
+
+  @keyframes floatCircle { 
+    0% { transform: translateY(0) translateX(0); } 
+    50% { transform: translateY(-60px) translateX(60px); } 
+    100% { transform: translateY(0) translateX(0); } 
+  }
 
   /* Templates grid */
   #libraryGrid {
@@ -59,35 +81,31 @@
     margin:40px auto;
     padding:0 24px;
   }
-/* Keep all previous card sizes intact */
-.card {
-  background:#1e293b;   /* dark slate */
-  border-radius:16px;
-  overflow:hidden;
-  box-shadow:0 10px 24px rgba(0,0,0,.06);
-  cursor:pointer;
-  transition:transform 0.2s, box-shadow 0.2s;
-  text-align:center;
-}
 
-/* Ensure images remain the same size */
-.card img {
-  width:100%;
-  height:200px;   /* keep fixed height */
-  object-fit:cover;
-}
-
-/* Optional: card title inside card */
-.card .card-title {
-  color:#f8fafc;   /* light text */
-  font-weight:600;
-  margin:12px 0;
-}
-
- .card:hover { 
-  transform:translateY(-3px); 
-  box-shadow:0 18px 40px rgba(0,0,0,.25); 
-}
+  /* Card styling */
+  .card {
+    background:#1e293b;
+    border-radius:16px;
+    overflow:hidden;
+    box-shadow:0 10px 24px rgba(0,0,0,.06);
+    cursor:pointer;
+    transition:transform 0.2s, box-shadow 0.2s;
+    text-align:center;
+  }
+  .card img {
+    width:100%;
+    height:200px;
+    object-fit:cover;
+  }
+  .card .card-title {
+    color:#f8fafc;
+    font-weight:600;
+    margin:12px 0;
+  }
+  .card:hover { 
+    transform:translateY(-3px); 
+    box-shadow:0 18px 40px rgba(0,0,0,.25); 
+  }
 
   /* Footer */
   footer { background:#111827; color:#d1d5db; padding:40px 0; margin-top:auto; }
@@ -97,7 +115,7 @@
   footer ul { list-style:none; padding:0; margin:0; }
   footer ul li { margin-bottom:8px; }
   footer ul li a { color:#d1d5db; text-decoration:none; }
-  footer ul li a:hover { color:#fff; }
+  footer ul li a:hover { color:#3b82f6; }
   .text-center { text-align:center; margin-top:20px; font-size:.875rem; color:#9ca3af; }
 </style>
 </head>
@@ -157,7 +175,6 @@
 <script>
   const libraryGrid = document.getElementById("libraryGrid");
 
-  // Load templates dynamically from localStorage set by admin
   let library = JSON.parse(localStorage.getItem("sitegenLibrary") || "[]");
 
   function openInWizard(zipBlob) {
