--- a/features.html
+++ b/features.html
@@ -48,11 +48,12 @@ nav a:hover { color:#3b82f6; }
   text-align:center;
   padding:140px 24px 100px;
   overflow:hidden;
+  z-index:1;
 }
 .hero h1 { font-size:3rem; font-weight:800; margin-bottom:16px; z-index:1; position:relative; animation: fadeInUp 1s ease forwards; opacity:0; }
 .hero p { font-size:1.25rem; color:#cbd5e1; z-index:1; position:relative; animation: fadeInUp 1s 0.5s ease forwards; opacity:0; }
 
-/* Hero background floating shapes */
+/* Hero floating balls */
 .hero::before, .hero::after {
   content:"";
   position:absolute;
@@ -77,6 +78,8 @@ nav a:hover { color:#3b82f6; }
   grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
   gap:40px;
   text-align:center;
+  position:relative;
+  z-index:1;
 }
 .feature-card {
   background:#1e293b;
@@ -100,14 +103,14 @@ nav a:hover { color:#3b82f6; }
 .feature-card h3 { font-size:1.5rem; margin-bottom:12px; }
 .feature-card p { font-size:1rem; color:#cbd5e1; }
 
-/* Interactive Workflow */
+/* Workflow Cards */
 .workflow-container {
   max-width:1000px;
   margin:140px auto;
   position:relative;
   height:300px;
+  z-index:1;
 }
-.workflow-svg { width:100%; height:100%; }
 .step-card {
   width:180px;
   background:#111827;
@@ -134,7 +137,7 @@ nav a:hover { color:#3b82f6; }
 @keyframes popCheck { 0% { transform: scale(0); opacity:0; } 50% { transform: scale(1.4); opacity:1; } 100% { transform: scale(1); opacity:1; } }
 
 /* Footer */
-footer { background:#111827; color:#d1d5db; padding:40px 0; margin-top:auto; }
+footer { background:#111827; color:#d1d5db; padding:40px 0; margin-top:auto; position:relative; z-index:1; }
 .footer-grid { display:flex; flex-wrap:wrap; max-width:1200px; margin:0 auto; padding:0 24px; gap:24px; justify-content: space-between; }
 .footer-grid > div { flex:1 1 250px; min-width:200px; }
 footer h4, footer h5 { color:#fff; margin-bottom:12px; }
@@ -144,6 +147,23 @@ footer ul li a { color:#d1d5db; text-decoration:none; }
 footer ul li a:hover { color:#3b82f6; }
 .text-center { text-align:center; margin-top:20px; font-size:.875rem; color:#9ca3af; }
 
+/* Tech background behind content */
+#techCanvasFull {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:0;
+}
+.content-overlay {
+  position:relative;
+  z-index:1;
+}
+.tech-bg-wrapper {
+  position:relative;
+  width:100%;
+}
 </style>
 </head>
 <body>
@@ -171,79 +191,145 @@ footer ul li a:hover { color:#3b82f6; }
   <p>Sitegen transforms your ideas into live websites in just a few clicks.</p>
 </section>
 
-<!-- Features Cards -->
-<div class="features">
-  <div class="feature-card">
-    <div class="feature-icon">🖼️</div>
-    <h3>Choose Template</h3>
-    <p>Select from hundreds of professional templates in one click.</p>
-  </div>
-  <div class="feature-card">
-    <div class="feature-icon">✏️</div>
-    <h3>Customize Easily</h3>
-    <p>Edit text, images, colors, and layout intuitively.</p>
-  </div>
-  <div class="feature-card">
-    <div class="feature-icon">⚡</div>
-    <h3>Publish Instantly</h3>
-    <p>Host your website with a single click and go live immediately.</p>
+<!-- Tech background wrapper -->
+<div class="tech-bg-wrapper">
+  <canvas id="techCanvasFull"></canvas>
+  <div class="content-overlay">
+
+    <!-- Features Cards -->
+    <div class="features">
+      <div class="feature-card">
+        <div class="feature-icon">🖼️</div>
+        <h3>Choose Template</h3>
+        <p>Select from hundreds of professional templates in one click.</p>
+      </div>
+      <div class="feature-card">
+        <div class="feature-icon">✏️</div>
+        <h3>Customize Easily</h3>
+        <p>Edit text, images, colors, and layout intuitively.</p>
+      </div>
+      <div class="feature-card">
+        <div class="feature-icon">⚡</div>
+        <h3>Publish Instantly</h3>
+        <p>Host your website with a single click and go live immediately.</p>
+      </div>
+    </div>
+
+    <!-- Workflow Demo -->
+    <div class="workflow-container">
+      <svg class="workflow-svg">
+        <line x1="0" y1="150" x2="100%" y2="150" stroke="#3b82f6" stroke-width="4" stroke-dasharray="12" stroke-dashoffset="0"/>
+      </svg>
+      <div class="step-card" id="step1" style="top:40px; left:10%;">Select Template
+        <div class="checkmark">✔</div>
+      </div>
+      <div class="step-card" id="step2" style="top:40px; left:40%;">Customize Details
+        <div class="checkmark">✔</div>
+      </div>
+      <div class="step-card" id="step3" style="top:40px; left:70%;">Site Ready!
+        <div class="checkmark">✔</div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+      <div class="footer-grid">
+        <div>
+          <h4>Sitegen Hosting</h4>
+          <p>Reliable hosting solutions to power your online journey.</p>
+        </div>
+        <div>
+          <h5>Quick Links</h5>
+          <ul>
+            <li><a href="plans.html">Plans</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div>
+          <h5>Get in Touch</h5>
+          <p>Email: support@sitegenhosting.com</p>
+          <p>Phone: +1 (800) 123-4567</p>
+        </div>
+      </div>
+      <div class="text-center">© 2025 Sitegen Hosting. All rights reserved.</div>
+    </footer>
+
   </div>
 </div>
-
-<!-- Workflow Demo -->
-<div class="workflow-container">
-  <svg class="workflow-svg">
-    <line x1="0" y1="150" x2="100%" y2="150" stroke="#3b82f6" stroke-width="4" stroke-dasharray="12" stroke-dashoffset="0"/>
-  </svg>
-  <div class="step-card" id="step1" style="top:40px; left:10%;">Select Template
-    <div class="checkmark">✔</div>
-  </div>
-  <div class="step-card" id="step2" style="top:40px; left:40%;">Customize Details
-    <div class="checkmark">✔</div>
-  </div>
-  <div class="step-card" id="step3" style="top:40px; left:70%;">Site Ready!
-    <div class="checkmark">✔</div>
-  </div>
-</div>
-
-<!-- Footer -->
-<footer>
-  <div class="footer-grid">
-    <div>
-      <h4>Sitegen Hosting</h4>
-      <p>Reliable hosting solutions to power your online journey.</p>
-    </div>
-    <div>
-      <h5>Quick Links</h5>
-      <ul>
-        <li><a href="plans.html">Plans</a></li>
-        <li><a href="features.html">Features</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-    <div>
-      <h5>Get in Touch</h5>
-      <p>Email: support@sitegenhosting.com</p>
-      <p>Phone: +1 (800) 123-4567</p>
-    </div>
-  </div>
-  <div class="text-center">© 2025 Sitegen Hosting. All rights reserved.</div>
-</footer>
 
 <script>
-  // Workflow animation sequence
-  const steps = [document.getElementById('step1'), document.getElementById('step2'), document.getElementById('step3')];
-  let index = 0;
-  function completeStep() {
-    if(index >= steps.length) return;
-    steps[index].style.opacity = '1';
-    steps[index].style.transform = 'translateY(0) scale(1)';
-    steps[index].classList.add('completed');
-    index++;
-    setTimeout(completeStep, 1800);
+// Workflow animation
+const steps = [document.getElementById('step1'), document.getElementById('step2'), document.getElementById('step3')];
+let index = 0;
+function completeStep() {
+  if(index >= steps.length) return;
+  steps[index].style.opacity = '1';
+  steps[index].style.transform = 'translateY(0) scale(1)';
+  steps[index].classList.add('completed');
+  index++;
+  setTimeout(completeStep, 1800);
+}
+window.onload = () => { setTimeout(completeStep, 1200); }
+
+// Tech background canvas
+const canvasFull = document.getElementById('techCanvasFull');
+const ctxFull = canvasFull.getContext('2d');
+
+function resizeCanvas() {
+  canvasFull.width = canvasFull.offsetWidth;
+  canvasFull.height = canvasFull.offsetHeight;
+}
+window.addEventListener('resize', resizeCanvas);
+resizeCanvas();
+
+const nodes = [];
+for(let i=0;i<60;i++){
+  nodes.push({
+    x: Math.random()*canvasFull.width,
+    y: Math.random()*canvasFull.height,
+    vx: (Math.random()-0.5)*0.5,
+    vy: (Math.random()-0.5)*0.5,
+    radius: Math.random()*2+1.5
+  });
+}
+
+function drawFull() {
+  ctxFull.clearRect(0,0,canvasFull.width,canvasFull.height);
+
+  for(let i=0;i<nodes.length;i++){
+    for(let j=i+1;j<nodes.length;j++){
+      const dx = nodes[i].x - nodes[j].x;
+      const dy = nodes[i].y - nodes[j].y;
+      const dist = Math.sqrt(dx*dx + dy*dy);
+      if(dist < 120){
+        ctxFull.strokeStyle = 'rgba(59,130,246,' + (1 - dist/120) + ')';
+        ctxFull.lineWidth = 0.8;
+        ctxFull.beginPath();
+        ctxFull.moveTo(nodes[i].x, nodes[i].y);
+        ctxFull.lineTo(nodes[j].x, nodes[j].y);
+        ctxFull.stroke();
+      }
+    }
   }
-  window.onload = () => { setTimeout(completeStep, 1200); }
+
+  nodes.forEach(node => {
+    ctxFull.fillStyle = '#3b82f6';
+    ctxFull.beginPath();
+    ctxFull.arc(node.x, node.y, node.radius, 0, Math.PI*2);
+    ctxFull.fill();
+
+    node.x += node.vx;
+    node.y += node.vy;
+
+    if(node.x < 0 || node.x > canvasFull.width) node.vx *= -1;
+    if(node.y < 0 || node.y > canvasFull.height) node.vy *= -1;
+  });
+
+  requestAnimationFrame(drawFull);
+}
+drawFull();
 </script>
 
 </body>
